// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0 Snapshot 1`] = `
<div>
  <table
    class="Transliteration__lines"
  >
    <tbody>
      <tr
        id="line-1"
      >
        <td />
        <td
          class="Transliteration__RulingDollarLine"
          colspan="1"
        >
          <div
            class="Transliteration__ruling"
          />
        </td>
        <td>
           
          <a
            class="Transliteration__NoteLink"
            href="#note-1"
          >
            1
          </a>
           
          <a
            class="Transliteration__NoteLink"
            href="#note-2"
          >
            2
          </a>
           
        </td>
      </tr>
      <tr
        id="line-2"
      >
        <td />
        <td
          class="Transliteration__RulingDollarLine"
          colspan="1"
        >
          <div
            class="Transliteration__ruling"
          />
        </td>
        <td>
           
        </td>
      </tr>
      <tr
        id="line-3"
      >
        <td />
        <td
          class="Transliteration__RulingDollarLine"
          colspan="1"
        >
          <div
            class="Transliteration__ruling"
          />
        </td>
        <td>
           
          <a
            class="Transliteration__NoteLink"
            href="#note-3"
          >
            3
          </a>
           
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`1 Snapshot 1`] = `
<div>
  <table
    class="Transliteration__lines"
  >
    <tbody>
      <tr
        id="line-0"
      >
        <td />
        <td
          colspan="1"
        />
        <td>
           
          <a
            class="Transliteration__NoteLink"
            href="#note-1"
          >
            1
          </a>
           
          <a
            class="Transliteration__NoteLink"
            href="#note-2"
          >
            2
          </a>
           
        </td>
      </tr>
      <tr
        id="line-1"
      >
        <td />
        <td
          class="Transliteration__RulingDollarLine"
          colspan="1"
        >
          <div
            class="Transliteration__ruling"
          />
        </td>
        <td>
           
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
